tests/transpiler/x/go/list_set_ops.error
exit status 1
# command-line-arguments
../../../tests/transpiler/x/go/list_set_ops.go:9:30: syntax error: unexpected name union, expected )
