tests/transpiler/x/go/list_set_ops.go
//go:build ignore

// Generated by Mochi v0.10.31 on 2025-07-19 12:25:24 GMT+7
package main

import "fmt"

func main() {
    fmt.Println(([]int{1, 2} union []int{2, 3}))
    fmt.Println(([]int{1, 2, 3} except []int{2}))
    fmt.Println(([]int{1, 2, 3} intersect []int{2, 4}))
    fmt.Println(len(([]int{1, 2} union []int{2, 3})))
}
